# python-project-52

./: .codeclimate.yml  .coverage  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: CI.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: rollbar_middleware.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_options_alter_labels_created_at_and_more.py
task_manager/statuses/: models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_options_alter_statuses_created_at_and_more.py
task_manager/tasks/: filters.py  models.py  temp_forms.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tasks_options_alter_tasks_author_and_more.py  0004_alter_tasks_executor.py  0005_alter_tasks_executor.py  0006_rename_label_tasks_labels.py  0007_alter_tasks_labels.py
task_manager/templates/: base.html  index.html  navigation.html
task_manager/templates/apps/: apps_confirm_delete.html  apps_list.html
task_manager/templates/labels/: labels_list.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: statuses_list.html
task_manager/templates/tasks/: tasks_detail.html  tasks_list.html
task_manager/templates/users/: registration.html  users_confirm_delete.html  users_form.html  (+1 more)
task_manager/users/: admin.py  forms.py  models.py  test.py  tests.py  urls.py  views.py
(+2 files in other folders)
