[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Oleg Cherkashin <impuls_64@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
